--- a/_includes/SUMMARY.html
+++ b/_includes/SUMMARY.html
@@ -1,78 +1,78 @@
 <ul>
 	<li>
-		<a href="https://wamogu.github.io/STM32_HAL_Tutorial/%E8%BD%AF%E4%BB%B6%E7%8E%AF%E5%A2%83.html/>简介</a>
+		<a href="https://wamogu.github.io/STM32_HAL_Tutorial/%E8%BD%AF%E4%BB%B6%E7%8E%AF%E5%A2%83/">简介</a>
 	</li>
 </ul>
 <h2>
 	<li><a href="./软件环境/README.html">软件环境</a></li>
 </h2>
 <ul>
-	<li><a href="./软件环境/VScode快速入门.html/>VScode快速入门</a></li>
-	<li><a href="./软件环境/VScode插件分享.html/>VScode插件分享</a></li>
-	<li><a href="./软件环境/CubeMX简介.html/>CubeMX简介</a></li>
-	<li><a href="./软件环境/创建一个工程.html/>创建一个工程</a></li>
-	<li><a href="./软件环境/Git版本管理.html/>Git版本管理</a></li>
-	<li><a href="./软件环境/创建一个快速开发模板.html/>创建一个快速开发模板</a></li>
+	<li><a href="./软件环境/VScode快速入门.html">VScode快速入门</a></li>
+	<li><a href="./软件环境/VScode插件分享.html">VScode插件分享</a></li>
+	<li><a href="./软件环境/CubeMX简介.html">CubeMX简介</a></li>
+	<li><a href="./软件环境/创建一个工程.html">创建一个工程</a></li>
+	<li><a href="./软件环境/Git版本管理.html">Git版本管理</a></li>
+	<li><a href="./软件环境/创建一个快速开发模板.html">创建一个快速开发模板</a></li>
 </ul>
 <h2>
-	<li><a href="./STM32的IO口/README.html/>STM32的IO口</a></li>
+	<li><a href="./STM32的IO口/README.html">STM32的IO口</a></li>
 </h2>
 <ul>
-	<li><a href="./STM32的IO口/点亮一个LED.html/>点亮一个LED</a></li>
-	<li><a href="./STM32的IO口/使用独立按键.html/>使用独立按键</a></li>
+	<li><a href="./STM32的IO口/点亮一个LED.html">点亮一个LED</a></li>
+	<li><a href="./STM32的IO口/使用独立按键.html">使用独立按键</a></li>
 </ul>
 <h2>
-	<li><a href="./STM32中断/README.html/>STM32的IO口</a></li>
+	<li><a href="./STM32中断/README.html">STM32的IO口</a></li>
 </h2>
 <ul>
-	<li><a href="./STM32中断/CubeMX外部中断配置.html/>CubeMX外部中断配置</a></li>
-	<li><a href="./STM32中断/HAL库外部中断程序.html/>HAL库外部中断程序</a></li>
+	<li><a href="./STM32中断/CubeMX外部中断配置.html">CubeMX外部中断配置</a></li>
+	<li><a href="./STM32中断/HAL库外部中断程序.html">HAL库外部中断程序</a></li>
 </ul>
 <h2>
-	<li><a href="./STM32定时器/README.html/>STM32定时器</a></li>
+	<li><a href="./STM32定时器/README.html">STM32定时器</a></li>
 </h2>
 <ul>
-	<li><a href="./STM32定时器/定时器简单中断程序.html/>定时器简单中断程序</a></li>
-	<li><a href="./STM32定时器/硬件PWM输出.html/>硬件PWM输出</a></li>
-    <li><a href="./STM32定时器/DMA输出PWM控制WS2812.html/>DMA输出PWM控制WS2812</a></li>
+	<li><a href="./STM32定时器/定时器简单中断程序.html">定时器简单中断程序</a></li>
+	<li><a href="./STM32定时器/硬件PWM输出.html">硬件PWM输出</a></li>
+    <li><a href="./STM32定时器/DMA输出PWM控制WS2812.html">DMA输出PWM控制WS2812</a></li>
 </ul>
 <h2>
-	<li><a href="./STM32串口/README.html/>STM32串口</a></li>
+	<li><a href="./STM32串口/README.html">STM32串口</a></li>
 </h2>
 <ul>
-	<li><a href="./STM32串口/串口发送及中断接收.html/>串口发送及中断接收</a></li>
-	<li><a href="./STM32串口/串口的格式化输出.html/>串口的格式化输出</a></li>
-    <li><a href="./STM32串口/串口DMA传输.html/>串口DMA传输</a></li>
-    <li><a href="./STM32串口/简单协议编写.html/>简单协议编写</a></li>
+	<li><a href="./STM32串口/串口发送及中断接收.html">串口发送及中断接收</a></li>
+	<li><a href="./STM32串口/串口的格式化输出.html">串口的格式化输出</a></li>
+    <li><a href="./STM32串口/串口DMA传输.html">串口DMA传输</a></li>
+    <li><a href="./STM32串口/简单协议编写.html">简单协议编写</a></li>
 </ul>
 <h2>
-	<li><a href="./SPI协议/README.html/>SPI协议</a></li>
+	<li><a href="./SPI协议/README.html">SPI协议</a></li>
 </h2>
 <ul>
-	<li><a href="./SPI协议/CubeMX配置及主要参数.html/>CubeMX配置及主要参数</a></li>
-	<li><a href="./SPI协议/OLED驱动移植.html/>OLED驱动移植</a></li>
-    <li><a href="./SPI协议/LVGL移植显示.html/>LVGL移植显示</a></li>
-    <li><a href="./SPI协议/Flash的使用及文件系统.html/>Flash的使用及文件系统</a></li>
+	<li><a href="./SPI协议/CubeMX配置及主要参数.html">CubeMX配置及主要参数</a></li>
+	<li><a href="./SPI协议/OLED驱动移植.html">OLED驱动移植</a></li>
+    <li><a href="./SPI协议/LVGL移植显示.html">LVGL移植显示</a></li>
+    <li><a href="./SPI协议/Flash的使用及文件系统.html">Flash的使用及文件系统</a></li>
 </ul>
 <h2>
-	<li><a href="./ADC的使用/README.html/>ADC的使用</a></li>
+	<li><a href="./ADC的使用/README.html">ADC的使用</a></li>
 </h2>
 <ul>
-	<li><a href="./ADC的使用/CubeMX中ADC配置概览.html/>CubeMX中ADC配置概览</a></li>
-	<li><a href="./ADC的使用/查询阻塞方式.html/>查询阻塞方式</a></li>
-    <li><a href="./ADC的使用/中断方式.html/>中断方式</a></li>
-    <li><a href="./ADC的使用/DMA方式.html/>DMA方式</a></li>
-    <li><a href="./ADC的使用/应用示例.html/>应用示例</a></li>
+	<li><a href="./ADC的使用/CubeMX中ADC配置概览.html">CubeMX中ADC配置概览</a></li>
+	<li><a href="./ADC的使用/查询阻塞方式.html">查询阻塞方式</a></li>
+    <li><a href="./ADC的使用/中断方式.html">中断方式</a></li>
+    <li><a href="./ADC的使用/DMA方式.html">DMA方式</a></li>
+    <li><a href="./ADC的使用/应用示例.html">应用示例</a></li>
 </ul>
 <h2>
-	<li><a href="./其他代码整合搬运/README.html/>其他代码整合搬运</a></li>
+	<li><a href="./其他代码整合搬运/README.html">其他代码整合搬运</a></li>
 </h2>
 <ul>
-	<li><a href="./其他代码整合搬运/MultiButton.html/>MultiButton</a></li>
-	<li><a href="./其他代码整合搬运/EasyLogger.html/>EasyLogger</a></li>
-    <li><a href="./其他代码整合搬运/letter-shell.html/>letter-shell</a></li>
-    <li><a href="./其他代码整合搬运/EasyFlash.html/>EasyFlash</a></li>
-    <li><a href="./其他代码整合搬运/时间片调度.html/>时间片调度</a></li>
+	<li><a href="./其他代码整合搬运/MultiButton.html">MultiButton</a></li>
+	<li><a href="./其他代码整合搬运/EasyLogger.html">EasyLogger</a></li>
+    <li><a href="./其他代码整合搬运/letter-shell.html">letter-shell</a></li>
+    <li><a href="./其他代码整合搬运/EasyFlash.html">EasyFlash</a></li>
+    <li><a href="./其他代码整合搬运/时间片调度.html">时间片调度</a></li>
 </ul>
 <style>
 .nav h3 {
