--- a/_includes/SUMMARY.html
+++ b/_includes/SUMMARY.html
@@ -1,10 +1,10 @@
 <ul>
 	<li>
-		<a href="https://wamogu.github.io/STM32_HAL_Tutorial/%E8%BD%AF%E4%BB%B6%E7%8E%AF%E5%A2%83/">简介</a>
+		<a href="https://wamogu.github.io/STM32_HAL_Tutorial/">简介</a>
 	</li>
 </ul>
 <h2>
-	<li><a href="./软件环境/README.html">软件环境</a></li>
+	<li><a href="./软件环境/">软件环境</a></li>
 </h2>
 <ul>
 	<li><a href="./软件环境/VScode快速入门.html">VScode快速入门</a></li>
@@ -15,14 +15,14 @@
 	<li><a href="./软件环境/创建一个快速开发模板.html">创建一个快速开发模板</a></li>
 </ul>
 <h2>
-	<li><a href="./STM32的IO口/README.html">STM32的IO口</a></li>
+	<li><a href="./STM32的IO口/">STM32的IO口</a></li>
 </h2>
 <ul>
 	<li><a href="./STM32的IO口/点亮一个LED.html">点亮一个LED</a></li>
 	<li><a href="./STM32的IO口/使用独立按键.html">使用独立按键</a></li>
 </ul>
 <h2>
-	<li><a href="./STM32中断/README.html">STM32的IO口</a></li>
+	<li><a href="./STM32中断/">STM32的IO口</a></li>
 </h2>
 <ul>
 	<li><a href="./STM32中断/CubeMX外部中断配置.html">CubeMX外部中断配置</a></li>
