--- a/_includes/SUMMARY.html
+++ b/_includes/SUMMARY.html
@@ -49,7 +49,7 @@
 	<li><a href="https://wamogu.github.io/STM32_HAL_Tutorial/SPI协议/">SPI协议</a></li>
 </h2>
 <ul>
-	<li><a href="https://wamogu.github.io/STM32_HAL_Tutorial/SPI协议/CubeMX配置及主要参数.html">CubeMX配置及主要参数</a></li>
+	<li><a href="https://wamogu.github.io/STM32_HAL_Tutorial/SPI协议/CubeMX配置及主要函数.html">CubeMX配置及主要参数</a></li>
 	<li><a href="https://wamogu.github.io/STM32_HAL_Tutorial/SPI协议/OLED驱动移植.html">OLED驱动移植</a></li>
     <li><a href="https://wamogu.github.io/STM32_HAL_Tutorial/SPI协议/LVGL移植显示.html">LVGL移植显示</a></li>
     <li><a href="https://wamogu.github.io/STM32_HAL_Tutorial/SPI协议/Flash的使用及文件系统.html">Flash的使用及文件系统</a></li>
